Fixed onClick overlap bug

--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -51,44 +51,52 @@ a {
   row-gap: 10px;
 }
 #profile-page #profile-listings .profile-card {
-  min-height: 230px;
-  width: 150px;
+  position: relative;
   border: 4px solid #F1D7A7;
   background-color: #25303A;
-  position: relative;
-  display: grid;
-  grid-template-rows: 1fr auto;
+}
+#profile-page #profile-listings .card-content {
+  min-height: 230px;
+  height: 100%;
+  width: 150px;
+  display: flex;
+  flex-direction: column;
   text-align: left;
   padding: 5px 5px 10px;
 }
-#profile-page #profile-listings .profile-card .listing-image {
+#profile-page #profile-listings .card-content .listing-image {
   text-align: center;
   overflow: hidden;
+  flex-grow: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 0 5px;
 }
-#profile-page #profile-listings .profile-card .listing-image img {
-  max-width: 100%;
-  max-height: 100%;
+#profile-page #profile-listings .card-content .listing-image img {
+  width: 100%;
+  height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
 }
-#profile-page #profile-listings .profile-card .listing-title {
+#profile-page #profile-listings .card-content .listing-title {
   margin-bottom: 10px;
   font-size: 14px;
   font-weight: 700;
 }
-#profile-page #profile-listings .profile-card .listing-price {
+#profile-page #profile-listings .card-content .listing-price {
   font-size: 20px;
 }
-#profile-page #profile-listings .profile-card .listing-category {
+#profile-page #profile-listings .card-content .listing-category {
   text-transform: capitalize;
 }
-#profile-page #profile-listings .profile-card .profile-listing-edit-delete {
+#profile-page #profile-listings .profile-listing-edit-delete {
   font-size: 14px;
   position: absolute;
-  bottom: 5px;
-  right: -5px;
+  bottom: 10px;
+  right: 0;
 }
-#profile-page #profile-listings .profile-card .profile-listing-edit-delete * {
+#profile-page #profile-listings .profile-listing-edit-delete * {
   margin-right: 10px;
 }
 #profile-page #profile-listings #add-listing {
