--- a/frontend/src/css/modules/responsive/_mobile.scss
+++ b/frontend/src/css/modules/responsive/_mobile.scss
@@ -51,15 +51,18 @@ a {
         row-gap: 10px;
 
         .profile-card {
-            min-height: 230px;
-            width: 150px;
-
+            position: relative;
             border: 4px solid $main-gold;
             background-color: $main-blue;
+        }
 
-            position: relative;
-            display: grid;
-            grid-template-rows: 1fr auto;
+        .card-content {
+            min-height: 230px;
+            height: 100%;
+            width: 150px;
+
+            display: flex;
+            flex-direction: column;
 
             text-align: left;
             padding: 5px 5px 10px;
@@ -67,10 +70,17 @@ a {
             .listing-image {
                 text-align: center;
                 overflow: hidden;
+                flex-grow: 1;
+
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+                padding: 0 0 5px;
 
                 img {
-                    max-width: 100%;
-                    max-height: 100%;
+                    width: 100%;
+                    height: 100%;
                     object-fit: cover;
                 }
             }
@@ -88,16 +98,16 @@ a {
             .listing-category {
                 text-transform: capitalize;
             }
+        }
 
-            .profile-listing-edit-delete {
-                font-size: $mobile-large-size;
+        .profile-listing-edit-delete {
+            font-size: $mobile-large-size;
 
-                position: absolute;
-                bottom: 5px;
-                right: -5px;
-                * {
-                    margin-right: 10px;
-                }
+            position: absolute;
+            bottom: 10px;
+            right: 0;
+            * {
+                margin-right: 10px;
             }
         }
 
